<resources>
    <string name="app_name">"Communify "</string>
    <string name="main_panel_title">Collabrate &amp; Communicate</string>
    <string name="title_activity_update">UpdateActivity</string>
    <string name="title_activity_view_posts">ViewPosts</string>
    <string name="prompt">Residence Status</string>
    <string-array name="Status">
        <item>Owner</item>
        <item>Tenant</item>
    </string-array>
    <string name="stanby_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras eros velit, pellentesque sit amet tortor at, feugiat suscipit nibh. Quisque laoreet ante sit amet ante auctor aliquam.</string>
    <string name="act_signin_sign_in">Sign In</string>
    <string name="act_signin_password">Password</string>
    <string name="act_signin_password_hint">Enter the password</string>
    <string name="act_signin_user_name">Username</string>
    <string name="act_signin_sign_up">Sign In</string>
    <string name="act_signin_cancel">Cancel</string>
    <string name="act_signin_phone">Phone Number</string>
    <string name="act_signin_phone_hint">Enter You Phone Number</string>
    <string name="act_signin_user_name_hint">Enter your user name</string>
    <string name="act_signin_dont_have_account">Don\'t have an account?</string>
    <string name="act_signup_email_id">Email</string>
    <string name="act_signup_email_id_hint">Provide your email</string>
    <string name="act_signup_password">Password</string>
    <string name="act_signup_password_hint">Provide your password</string>
    <string name="act_signup_firstname">First Name</string>
    <string name="act_signup_firstname_hint">Provide yor first name</string>
    <string name="act_signup_lastname">Last Name</string>
    <string name="act_signup_lastname_hint">Provide your last name</string>
    <string name="act_signup_title">Title</string>
    <string name="act_signup_title_hint">Select title</string>
    <string name="act_signup_phone">Phone</string>
    <string name="act_signup_sign_up">Sign Up</string>
    <string name="act_signup_cancel">Cancel</string>
    <string-array name="act_signup_title_collection">
        <item>Mr</item>
        <item>Mrs</item>
        <item>Dr</item>
        <item>Jr</item>
    </string-array>
    <string name="title_activity_first_time_settings">FirstTimeSettings</string>
    <string name="act_firstlogset_proceed">Proceed</string>
    <string name="act_firstlogset_occupation">Occupation</string>
    <string name="act_firstlogset_occupation_hint">Enter occupation</string>
    <string name="act_firstlogset_phone">Phone</string>
    <string name="act_firstlogset_residence">ResidenceStatus</string>
    <string name="act_firstlogset_phone_hint">Enter Phone</string>
    <string name="act_firstlogset_adults">No Of Adults</string>
    <string name="act_firstlogset_adults_hint">Enter No Of Adults</string>
    <string name="act_firstlogset_child">No Of Child</string>
    <string name="act_firstlogset_child_hint">Enter No Of Child</string>
    <string name="act_firstlogset_infants">No Of Infants</string>
    <string name="act_firstlogset_infants_hint">Enter No Of Infants</string>
    <string name="core_hint_com">Hello Community</string>
    <string name="core_hint_poll">Hello Poll</string>
    <string name="core_hint_post">Hello Post</string>
    <string name="action_settings"></string>
    <string name="title_activity_menu"></string>
    <string name="frag_tv_post_title">Title</string>
    <string name="frag_tv_post_title_hint">Enter post title</string>
    <string name="frag_tv_post_attachment">Attachment</string>
    <string name="frag_tv_post_attachment_hint">Attach file (Optional)</string>
    <string name="frag_tv_post_message">Message</string>
    <string name="frag_tv_post_message_hint">Your message here</string>
    <string name="act_create_post_create">Create</string>
    <string name="act_create_post_cancel">Cancel</string>
    <string name="act_create_post_title">Post Title</string>
    <string name="act_create_post_title_hint">Provide post title</string>
    <string name="act_create_post_details">Post Details</string>
    <string name="act_create_post_details_hint">Provide post description</string>
    <string name="act_create_post_response_hint">Send your comments</string>
    <string name="act_contribute_poll_act_title">Polling</string>
    <string name="act_contribute_poll_submit">Submit</string>
    <string name="act_contribute_poll_cancel">Cancel</string>
    <string name="act_contribute_poll_question_hint">Enter Question</string>
    <string name="act_verify_phone">Verify Your Number</string>
    <string name="act_verify_phone_description">Please enter your mobile number to receive a verification code.</string>
    <string name="act_verify_continue">Continue</string>
    <string name="act_share_location_need">Nead Your Location</string>
    <string name="act_share_location_description">Please give us access to your GPS Location.</string>
    <string name="act_share_location_allow">Allow</string>
    <string name="act_view_profile_fullname">Gopalan Arun Prasad</string>
    <string name="act_view_profile_role">Association Head</string>
    <string name="act_view_profile_Update">Update Profile</string>
    <string name="act_view_profile_unit">Unit</string>
    <string name="act_view_profile_occupation">Occupation</string>
    <string name="act_view_profile_residence">Residence</string>
    <string name="act_view_profile_adults">Adults</string>
    <string name="act_view_profile_child">Child</string>
    <string name="act_view_profile_infants">Infants</string>
    <string name="act_view_profile_phone">Phone</string>
    <string name="act_view_profile_email">Email</string>
    <string name="act_view_invite_mem_title">Invite Members!</string>
    <string name="act_view_invite_mem_btn">Invite</string>
    <string name="act_view_invite_mem_desc">Add members to your community and get collaborated</string>
    <string name="title_activity_get_collaborated">GetCollaborated</string>
    <string name="frag_view_community_info_name">Community Name</string>
    <string name="frag_view_community_info_address">Address</string>
    <string name="frag_view_community_info_builder">Builder</string>
    <string name="frag_view_community_info_invite_code">Invite Code</string>
    <string name="frag_view_community_info_started_on">Started On</string>
    <string name="frag_view_community_info_owner">Owner</string>
    <string name="frag_view_community_info_tax_id">Tax ID</string>
    <string name="frag_edit_profile_first_name">First Name</string>
    <string name="frag_edit_profile_last_name">Last Name</string>
    <string name="frag_edit_profile_role">Role In Community </string>
    <string name="frag_edit_profile_unit">Unit</string>
    <string name="frag_edit_profile_occupation">Occupation</string>
    <string name="frag_edit_profile_residence">Residence</string>
    <string name="frag_edit_profile_adults">Adults</string>
    <string name="frag_edit_profile_child">Child</string>
    <string name="frag_edit_profile_infants">Infants</string>
    <string name="frag_edit_profile_phone">Phone</string>
    <string name="frag_edit_profile_email">Email</string>
    <string name="frag_edit_profile_first_name_hint">Provide your First Name</string>
    <string name="frag_edit_profile_last_name_hint">Provide your Last Name</string>
    <string name="frag_edit_profile_role_hint">Provide your Role In Community </string>
    <string name="frag_edit_profile_unit_hint">Provide your Unit</string>
    <string name="frag_edit_profile_occupation_hint">Provide your Occupation</string>
    <string name="frag_edit_profile_residence_hint">Provide your Residence</string>
    <string name="frag_edit_profile_adults_hint">Provide your Adults</string>
    <string name="frag_edit_profile_child_hint">Provide your Child</string>
    <string name="frag_edit_profile_infants_hint">Provide your Infants</string>
    <string name="frag_edit_profile_phone_hint">Provide your Phone</string>
    <string name="frag_edit_profile_email_hint">Provide your Email</string>
    <string name="frag_edit_profile_Update">Update Profile</string>
    <string name="frag_create_or_join_com_join">Join</string>
    <string name="frag_create_or_join_com_create">Create</string>
    <string name="frag_create_or_join_com_title">What are you waiting for?</string>
    <string name="frag_create_or_join_com_message">Lets join an existing community to get collaborated or create your own community to start collaborating</string>
    <string name="frag_create_or_join_com_enterinvite">Enter invite code to join  community</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>