<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/sign_in_form"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/lay1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.35"
        android:background="@drawable/login_bg"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical"
        android:weightSum="1">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_user_image"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_below="@+id/imageView"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:scaleType="centerCrop"
            android:src="@drawable/default_photo" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:text="@string/act_view_profile_fullname"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="5dp"
            android:text="@string/act_view_profile_role"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/sign_in_panel"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.60"
        android:gravity="bottom"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:stretchColumns="1">

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp">

                    <TextView
                        android:id="@+id/tview_first_name"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="left"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:text="@string/frag_edit_profile_first_name"
                        android:textColor="@android:color/black"
                        android:textSize="13sp" />
                </TableRow>

                <TableRow
                    android:layout_marginTop="5dp"
                    android:background="@drawable/bottom_gray_border">

                    <EditText
                        android:id="@+id/et_first_name_value"
                        android:layout_width="match_parent"
                        android:layout_marginBottom="15dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:layout_marginTop="3dp"
                        android:layout_weight="1"
                        android:background="@android:color/transparent"
                        android:hint="@string/frag_edit_profile_first_name_hint"
                        android:inputType="text"
                        android:textSize="15sp" />
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp">

                    <TextView
                        android:id="@+id/tview_last_name"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="left"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:text="@string/frag_edit_profile_last_name"
                        android:textColor="@android:color/black"
                        android:textSize="13sp" />
                </TableRow>

                <TableRow
                    android:layout_marginTop="5dp"
                    android:background="@drawable/bottom_gray_border">

                    <EditText
                        android:id="@+id/et_last_name_value"
                        android:layout_width="match_parent"
                        android:layout_marginBottom="15dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:layout_marginTop="3dp"
                        android:layout_weight="1"
                        android:background="@android:color/transparent"
                        android:hint="@string/frag_edit_profile_last_name_hint"
                        android:inputType="text"
                        android:textSize="15sp" />
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp">

                    <TextView
                        android:id="@+id/tview_phone"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="left"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:text="@string/frag_edit_profile_phone"
                        android:textColor="@android:color/black"
                        android:textSize="13sp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/bottom_gray_border">

                    <EditText
                        android:id="@+id/tview_phone_value"
                        android:layout_width="match_parent"
                        android:layout_marginBottom="15dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:layout_marginTop="3dp"
                        android:layout_weight="1"
                        android:background="@android:color/transparent"
                        android:hint="@string/frag_edit_profile_phone_hint"
                        android:inputType="phone"
                        android:textSize="15sp" />
                </TableRow>

                <TableRow android:layout_marginTop="15dp">

                    <TextView
                        android:id="@+id/tview_email"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="left"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:text="@string/frag_edit_profile_email"
                        android:textColor="@android:color/black"
                        android:textSize="13sp" />
                </TableRow>

                <TableRow
                    android:layout_marginTop="5dp"
                    android:background="@drawable/bottom_gray_border">

                    <EditText
                        android:id="@+id/tview_email_value"
                        android:layout_width="match_parent"
                        android:layout_marginBottom="15dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:layout_marginTop="3dp"
                        android:layout_weight="1"
                        android:background="@android:color/transparent"
                        android:hint="@string/frag_edit_profile_email_hint"
                        android:inputType="textEmailAddress"
                        android:textSize="15sp" />
                </TableRow>

                <TableRow android:layout_marginTop="15dp">

                    <TextView
                        android:id="@+id/tview_unit"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="left"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:text="@string/frag_edit_profile_unit"
                        android:textColor="@android:color/black"
                        android:textSize="13sp" />
                </TableRow>

                <TableRow
                    android:layout_marginTop="5dp"
                    android:background="@drawable/bottom_gray_border">

                    <EditText
                        android:id="@+id/tview_unit_value"
                        android:layout_width="match_parent"
                        android:layout_marginBottom="15dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:layout_marginTop="3dp"
                        android:layout_weight="1"
                        android:background="@android:color/transparent"
                        android:hint="@string/frag_edit_profile_unit_hint"
                        android:inputType="number"
                        android:textSize="15sp" />
                </TableRow>

                <TableRow android:layout_marginTop="15dp">

                    <TextView
                        android:id="@+id/tview_occupation"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="left"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:text="@string/frag_view_community_info_name"
                        android:textColor="@android:color/black"
                        android:textSize="13sp" />
                </TableRow>

                <TableRow
                    android:layout_marginTop="5dp"
                    android:background="@drawable/bottom_gray_border">

                    <EditText
                        android:id="@+id/tview_occupation_value"
                        android:layout_width="match_parent"
                        android:layout_marginBottom="15dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:layout_marginTop="3dp"
                        android:layout_weight="1"
                        android:background="@android:color/transparent"
                        android:hint="@string/frag_edit_profile_occupation_hint"
                        android:inputType="text"
                        android:textSize="15sp" />
                </TableRow>

                <TableRow android:layout_marginTop="15dp">

                    <TextView
                        android:id="@+id/tview_residence"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="left"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:text="@string/frag_edit_profile_residence"
                        android:textColor="@android:color/black"
                        android:textSize="13sp" />
                </TableRow>

                <TableRow
                    android:layout_marginTop="5dp"
                    android:background="@drawable/bottom_gray_border">

                    <EditText
                        android:id="@+id/tview_residence_value"
                        android:layout_width="match_parent"
                        android:layout_marginBottom="15dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:layout_marginTop="3dp"
                        android:layout_weight="1"
                        android:background="@android:color/transparent"
                        android:hint="@string/frag_edit_profile_residence_hint"
                        android:inputType="text"
                        android:textSize="15sp" />
                </TableRow>

                <TableRow android:layout_marginTop="15dp">

                    <TextView
                        android:id="@+id/tview_adults"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="left"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:text="@string/frag_edit_profile_adults"
                        android:textColor="@android:color/black"
                        android:textSize="13sp" />
                </TableRow>

                <TableRow
                    android:layout_marginTop="5dp"
                    android:background="@drawable/bottom_gray_border">

                    <EditText
                        android:id="@+id/tview_adults_value"
                        android:layout_width="match_parent"
                        android:layout_marginBottom="15dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:layout_marginTop="3dp"
                        android:layout_weight="1"
                        android:background="@android:color/transparent"
                        android:hint="@string/frag_edit_profile_adults_hint"
                        android:inputType="number"
                        android:textSize="15sp" />
                </TableRow>

                <TableRow android:layout_marginTop="15dp">

                    <TextView
                        android:id="@+id/tview_child"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="left"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:text="@string/frag_edit_profile_child"
                        android:textColor="@android:color/black"
                        android:textSize="13sp" />
                </TableRow>

                <TableRow
                    android:layout_marginTop="5dp"
                    android:background="@drawable/bottom_gray_border">

                    <EditText
                        android:id="@+id/tview_child_value"
                        android:layout_width="match_parent"
                        android:layout_marginBottom="15dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:layout_marginTop="3dp"
                        android:layout_weight="1"
                        android:background="@android:color/transparent"
                        android:hint="@string/frag_edit_profile_child_hint"
                        android:inputType="number"
                        android:textSize="15sp" />
                </TableRow>

                <TableRow android:layout_marginTop="15dp">

                    <TextView
                        android:id="@+id/tview_infants"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="left"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:text="@string/frag_edit_profile_infants"
                        android:textColor="@android:color/black"
                        android:textSize="13sp" />
                </TableRow>

                <TableRow
                    android:layout_marginTop="5dp"
                    android:background="@drawable/bottom_gray_border">

                    <EditText
                        android:id="@+id/tview_infants_value"
                        android:layout_width="match_parent"
                        android:layout_marginBottom="15dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:layout_marginTop="3dp"
                        android:layout_weight="1"
                        android:background="@android:color/transparent"
                        android:hint="@string/frag_edit_profile_infants_hint"
                        android:inputType="number"
                        android:textSize="15sp" />
                </TableRow>

            </TableLayout>


        </ScrollView>

    </LinearLayout>

</LinearLayout>