<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/sign_up_form"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="10dp"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/sign_up_info_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1">

        <TextView
            android:id="@+id/tview_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:text="@string/act_create_post_title"
            android:textColor="@android:color/darker_gray"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/et_title"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="3dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:hint="@string/act_create_post_title_hint"
            android:inputType="text"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/create_post_description"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.60"
        android:gravity="top"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tview_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:text="@string/act_create_post_details"
            android:textColor="@android:color/darker_gray"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/et_description"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="3dp"
            android:layout_weight="1"
            android:hint="@string/act_create_post_details_hint"
            android:background="@android:color/transparent"
            android:gravity="top|left"
            android:inputType="textMultiLine"
            android:scrollHorizontally="false"
            android:textSize="15sp" />

    </LinearLayout>
</LinearLayout>
