<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/sign_up_form"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/sign_up_info_panel"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="15dp"
        android:layout_weight="0.58"
        android:gravity="center"
        android:orientation="vertical"
        android:weightSum="1">


        <ImageView
            android:id="@+id/ivMyLocation"
            android:layout_width="230dp"
            android:layout_height="230dp"
            app:srcCompat="@drawable/share_my_location_logo" />

        <TextView
            android:id="@+id/tvAllowLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:text="@string/act_share_location_need"
            android:textAlignment="center"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvAllowLocationDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:text="@string/act_share_location_description"
            android:textAlignment="center" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/allow_location"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_allow"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorOrange1"
            android:text="@string/act_share_location_allow"
            android:textColor="@android:color/white" />

    </LinearLayout>
</LinearLayout>
